# ImageTextExtractor

./: .gitignore  CHANGELOG.md  ImageTextExtractor.cabal  LICENSE  Pulumi.yaml  README.md  haskeract.cabal  index.ts  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt
.devcontainer/: devcontainer.json
app/: Dockerfile  Main.hs
src/: Config.hs  Main.hs  Server.hs
src/Controllers/: Controllers.hs  Edit.hs  Remove.hs  Text.hs
src/Services/: Edit.hs  Rembg.hs  Services.hs  Tesseract.hs
src/Utils/: Files.hs  Helpers.hs  Http.hs
static/: index.html
static/js/: index.js
