cabal-version:      3.0
name:               haskeract
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Thiago Fernandes Dias
maintainer:         thiago.fernandesdias235@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
common warnings
    ghc-options: -Wall
executable haskeract
    import:           warnings
    main-is:          Main.hs
    build-depends:    base >= 4.6 && < 5,
                      process,
                      bytestring,
                      filepath,
                      http-types,
                      scotty,
                      text,
                      transformers,
                      wai-extra,
                      wai-middleware-static
    hs-source-dirs:   app
    default-language: Haskell2010
